# sgkit-vcf-old

./: .gitignore  requirements-demo.txt  requirements.txt  setup.cfg  vcf_prof.ipynb
sgkit_vcf/: __init__.py  tabix.py  utils.py  vcf_reader.py
sgkit_vcf/tests/: test_tabix.py  test_vcf_reader.py
