[metadata]
name = sgkit-vcf
author = sgkit Developers
license = Apache
description = VCF IO implementations for sgkit
long_description_content_type=text/x-rst
long_description =
    **sgkit-vcf** contains block array readers for large-scale genomic data stored as VCF
url = https://github.com/pystatgen/sgkit
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
packages = sgkit_vcf
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.7
install_requires =
    cyvcf2
    dask
    numpy
    xarray
    setuptools >= 41.2  # For pkg_resources
setup_requires =
    setuptools >= 41.2
    setuptools_scm

[coverage:report]
fail_under = 100

[flake8]
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503

[isort]
default_section = THIRDPARTY
known_first_party = sgkit
known_third_party = cyvcf2,numpy,setuptools,xarray
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[mypy-cyvcf2.*]
ignore_missing_imports = True
[mypy-dask.*]
ignore_missing_imports = True
[mypy-numpy.*]
ignore_missing_imports = True
[mypy-xarray.*]
ignore_missing_imports = True
[mypy-sgkit.*]
ignore_missing_imports = True
[mypy-sgkit_vcf.*]
allow_redefinition = True
[mypy-setuptools]
ignore_missing_imports = True
[mypy-sgkit_vcf.tests.*]
disallow_untyped_defs = False
